# dmx_controller

./: CMakeLists.txt  debug.c  dmx.c  dmx.h  lcd.c  lcd.h  main.c  median.c  median.h  test_hw.c  test_hw.h
board/: board.h  board_adc.c  board_adc.h  board_btn.c  board_btn.h  board_uart.c  board_uart.h
config/: chconf.h  halconf.h  mcuconf.h
debug/: debug.gdb
